--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>spring-web-config.xml</param-value>
+      <param-value>classpath*:/spring-web-config.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
