--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,11 +22,12 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-           classpath*:/applicationContext.xml
-           classpath*:/applicationContext-snaker.xml
+           classpath:applicationContext.xml
+           classpath:applicationContext-snaker.xml
         </param-value>
   </context-param>
   <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
   <servlet>
@@ -34,7 +35,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath*:/spring-web-config.xml</param-value>
+      <param-value>classpath:spring-web-config.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
