修复配置文件乱码问题

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -52,7 +52,7 @@ exception.500.msg=\u5BF9\u4E0D\u8D77\uFF0C\u7CFB\u7EDF\u5FD9\u788C\uFF0C\u8BF7\u
 exception.error.msg=\u5BF9\u4E0D\u8D77\uFF0C\u7A0B\u5E8F\u5F02\u5E38\uFF0C\u8BF7\u4E0E\u7BA1\u7406\u8054\u7CFB
 exception.notExits.msg=\u5BF9\u4E0D\u8D77\uFF0C\u8D44\u6E90\u4E0D\u5B58\u5728
 #附件上传提醒信息
-att.upload.prompt.msg=<p>\u5F00\u8BC4\u6807\u8D44\u6599\uFF1A\u5531\u6807\u4E00\u89C8\u8868\u3001\u8D44\u683C\u5BA1\u67E5\u8BB0\u5F55\u8868\u3001\u7B26\u5408\u6027\u5BA1\u67E5\u8BB0\u5F55\u8868\u3001\u8BC4\u6807\u603B\u5F97\u5206\u6C47\u603B\u8868\u53CA\u8BC4\u5BA1\u62A5\u544A\u3002\uFF08\u5747\u4E3A\u626B\u63CF\u4EF6\uFF09</p><p>\u4E2D\u6807\u4FE1\u606F\u586B\u62A5\uFF1A\u4E2D\u6807\u516C\u793A\u53CA\u4E2D\u6807\u901A\u77E5\u4E66\uFF08\u7EA2\u7AE0\uFF09\u626B\u63CF\u4EF6 </p>
+att.upload.prompt.msg=
 
 #流程任务超期自动执行配置;默认为：0
 #值为1表示，所有任务超期后自动执行；
@@ -62,8 +62,6 @@ flow.task.expire.all.auto=0
 #以下配置单点登录用到的属性(sso.开头)
 #配置单点登录服务器地址
 #sso.service=http://192.168.31.150:9090/SmartWeb/sso/auth
-#客户端IP；多个IP用逗号分隔
-sso.client.ips=192.168.31.150
 #密钥，传输参数时通过该密钥进行加密
 sso.secret.key=qazwertyuioptgb
 
