1.删除未用到的配置文件； 2.更新数据；3.修改配置文件； 4.增、删、修改按钮标签加，是否权限控制属性； 5.新增README文件

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -3,9 +3,9 @@ project.name=Smart\u6846\u67B6
 #开发模式(1--表示开发模式;0---表示产品模式)
 project.devModel=1
 project.version=v1.0
-project.copyright=\u7248\u6743\u6240\u6709 \u00A9 2010-2016 Smart\u6846\u67B6 All Right Reserved
+project.copyright=\u7248\u6743\u6240\u6709 \u00A9 2010-2017 Smart\u6846\u67B6 All Right Reserved
 #联系信息
-project.contactInfo=\u5730\u5740\uFF1A\u4E91\u5357\u7701\u6606\u660E\u5E02 \u90AE\u7F16\uFF1A650000
+project.contactInfo=\u5730\u5740\uFF1AXXXXXXX XXXXX XXXXXX
 
 #分页常量设置
 page.per.size=15
@@ -61,7 +61,7 @@ flow.task.expire.all.auto=0
 
 #以下配置单点登录用到的属性(sso.开头)
 #配置单点登录服务器地址
-#sso.service=http://192.168.31.150:9090/SmartWeb/sso/auth
+#sso.service=http://192.168.31.150:8080/smart-web2/sso/auth
 #密钥，传输参数时通过该密钥进行加密
 sso.secret.key=qazwertyuioptgb
 
