--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -71,3 +71,15 @@ sso.secret.key=qazwertyuioptgb
 domain.forward=0
 #域名；当domain.forward设置为1时，该选项才生效
 domain.name=localhost
+
+#推送消息配置；现阶段消息有三种，分别是：
+#notice -- 通知提醒；message -- 消息提醒；todo -- 待办提醒；
+#下面配置对应提醒采用的推送插件；如:comet4j等；多个插件名称之间英文逗号“,”隔开；
+#配置插件名称为：实现了IPushMessage接口对应的getPluginName()方法返回的名称；
+#如果为空，则采用所有已实现的插件进行推送
+#通知提醒
+push.msg.notice=comet4j
+#消息提醒
+push.msg.message=comet4j
+#待办提醒
+push.msg.todo=comet4j
