--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -35,6 +35,8 @@ log4j.logger.org.hibernate=info
 ### log JDBC bind parameters ###
 log4j.logger.org.hibernate.type=info
 #log4j.logger.org.hibernate.type=debug
+#
+log4j.logger.cn.com.smart=debug
 
 ### direct messages to file server.log ###
 ##log4j.appender.A1=org.apache.log4j.DailyRollingFileAppender
