1.新增选择显示数量； 2.修复其他一些bug

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -9,6 +9,8 @@ project.contactInfo=\u5730\u5740\uFF1AXXXXXXX XXXXX XXXXXX
 
 #分页常量设置
 page.per.size=15
+#每页显示的数量 
+page.show.size=15,30,40,50
 
 #存放文件的根目录
 root.dir=/home/lmq/Datas/web_upload
