1.修改系统配置文件; 2.修改消息提醒JS; 3.修复SQL参数过滤类; 4.readme新增系统截图

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -1,9 +1,9 @@
 #项目名称
-project.name=Smart\u6846\u67B6
+project.name=Smart OA\u6846\u67B6
 #开发模式(1--表示开发模式;0---表示产品模式)
 project.devModel=1
 project.version=v1.0
-project.copyright=\u7248\u6743\u6240\u6709 \u00A9 2010-2017 Smart\u6846\u67B6 All Right Reserved
+project.copyright=\u7248\u6743\u6240\u6709 \u00A9 2015-2017 Smart OA\u6846\u67B6 All Right Reserved
 #联系信息
 project.contactInfo=\u5730\u5740\uFF1AXXXXXXX XXXXX XXXXXX
 
@@ -13,8 +13,8 @@ page.per.size=15
 page.show.size=15,30,40,50
 
 #存放文件的根目录
-root.dir=/home/lmq/Datas/web_upload
-#root.dir=D\:web_upload
+#root.dir=/home/Datas/web_upload
+root.dir=E\:web_upload
 
 #存放文件管理目录
 sys.file.dir=${root.dir}#{file.separator}file
