--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,28 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>build-helper-maven-plugin</artifactId>
+           <version>3.0.0</version>
+           <executions>
+              <execution>
+                 <id>add-source</id>
+                 <phase>generate-sources</phase>
+                 <goals>
+                      <goal>add-source</goal>
+                  </goals>
+                   <configuration>
+                        <sources>
+                             <source>${project.basedir}/src/main/java</source>
+                             <source>${project.basedir}/src/main/web</source>
+                             <source>${project.basedir}/src/main/form</source>
+                             <source>${project.basedir}/src/main/flow</source>
+                        </sources>
+                    </configuration>
+                 </execution>
+             </executions>
+         </plugin>
     </plugins>
   </build>
 </project>
