系统配置文件新增说明

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -1,3 +1,11 @@
+#系统配置文件---使用说明：
+# 配置文件支持参数变量；参数变量有两种：自定义变量和系统变量
+# 自定义变量的使用格式为：${自定义变量名称}；
+# 系统变量的使用格式为：#{系统变量名称}
+# 如：root.dir=/home/user
+#    upload.dir=${root.dir}#{file.separator}upload
+# 解析后upload.dir的值为：/home/user/upload
+#
 #项目名称
 project.name=Smart OA\u6846\u67B6
 #开发模式(1--表示开发模式;0---表示产品模式)
