在系统配置文件中新增是否记录访问日志的设置功能

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -21,8 +21,8 @@ page.per.size=15
 page.show.size=15,30,40,50
 
 #存放文件的根目录
-#root.dir=/home/Datas/web_upload
-root.dir=E\:web_upload
+root.dir=/home/lmq/test/web_upload
+#root.dir=E\:web_upload
 
 #存放文件管理目录
 sys.file.dir=${root.dir}#{file.separator}file
@@ -93,3 +93,6 @@ push.msg.notice=comet4j
 push.msg.message=comet4j
 #待办提醒
 push.msg.todo=comet4j
+
+#设置是否记录访问日志；1--表示记录访问日志；0--表示不记录；默认为：1
+is.access.log=1
