1.修改访问日志记录方式，去掉日志更新； 2.修复参数过滤类（搜索对象类）属性转换为字符串的方法； 3.修复其他一些已知的问题

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
-log4j.rootLogger=INFO,stdout,A1,A2
+#log4j.rootLogger=INFO,stdout,A1,A2
+log4j.rootLogger=INFO,A1,A2
 
 ### direct log messages to stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
