1.升级工具类jar包；2.升级snaker-core（修改sql语句统一为小写）； 3.新增url授权功能（当前只是针对删除功能）；4.修复其他一些问题

--- a/src/main/resources/sysconfig.properties
+++ b/src/main/resources/sysconfig.properties
@@ -73,7 +73,7 @@ flow.task.expire.all.auto=0
 #配置单点登录服务器地址
 #sso.service=http://192.168.31.150:8080/smart-web2/sso/auth
 #密钥，传输参数时通过该密钥进行加密
-sso.secret.key=qazwertyuioptgb
+secret.key=qazwertyuioptgb
 
 #设置域名
 #如果是通过IP访问的话，是否跳转通过域名访问
