--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 #mysql version database setting
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/smart_web2_master?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/smart_web2?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
 jdbc.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
