--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.com.smart</groupId>
   <artifactId>smart-web2</artifactId>
-  <version>1.1</version>
+  <version>1.2.0.SNAPSHOT</version>
   <packaging>war</packaging>
   <name>smart-web2</name>
   <description/>
@@ -318,6 +318,7 @@
                              <source>${project.basedir}/src/main/web</source>
                              <source>${project.basedir}/src/main/form</source>
                              <source>${project.basedir}/src/main/flow</source>
+                             <source>${project.basedir}/src/main/report</source>
                         </sources>
                     </configuration>
                  </execution>
