--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.com.smart</groupId>
   <artifactId>smart-web2</artifactId>
-  <version>1.2.0.SNAPSHOT</version>
+  <version>1.2.1</version>
   <packaging>war</packaging>
   <name>smart-web2</name>
   <description/>
