--- a/pom.xml
+++ b/pom.xml
@@ -243,32 +243,24 @@
         </dependency>
         
 		<dependency>
-			<groupId>com.baidu.ueditor</groupId>
+			<groupId>com.baidu</groupId>
 			<artifactId>ueditor</artifactId>
 			<version>1.1.1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ueditor-1.1.1.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.snaker</groupId>
 			<artifactId>snaker-core</artifactId>
-			<version>1.6.4</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/snaker-core-1.6.6.jar</systemPath>
+			<version>1.6.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mixsmart</groupId>
 			<artifactId>mixsmart-utils</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/mixsmart-utils-2.0.4.jar</systemPath>
+			<version>2.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.comet4j</groupId>
 			<artifactId>comet4j</artifactId>
-			<version>comet4j-0.1.8-SNAPSHOT</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/comet4j-0.1.8-SNAPSHOT.jar</systemPath>
+			<version>0.1.8</version>
 		</dependency>
 
 		<dependency>
@@ -332,4 +324,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+        <repository>
+            <id>mixsmart_maven</id>
+            <name>MixSmart Maven</name>
+            <url>http://maven.mixsmart.cn:8081/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
